# axiomcode

./: .gitignore  AXIOMCODE_API_REFERENCE.py  AXIOMCODE_USER_GUIDE.md  CODE_REVIEW.md  DEPLOYMENT_LOCAL.md  DEPLOYMENT_QUICK_REFERENCE.md  FEATURES.md  PLAN.md  README.md  SYSTEM_RECOVERY_REPORT.md  TEST_PLAN.md  TEST_VALIDATION_REPORT.md  axiomcode.agent.md  batch_generate.py  batch_test_report.json  cache.py  cli.py  config.py  integration.py  pyproject.toml  rate_limit.py  recovery_check.py  recovery_output.txt  requirements.txt  retry_util.py  temp_pipeline_test.py  temp_probe_ollama.py  temp_test_ollama.py  test_functionality.py  test_gui_interactive.py
.github/agents/: ghagent1.agent.md  systempromptnewna.yaml
.github/workflows/: lint.yml  opencode.yml  pages.yml  pypi.yml  release.yml  security.yml  tests.yml  typecheck.yml
batch_generated/: specs.json
batch_generated/lean/: a_star_pathfinding.lean  activity_selection.lean  anagram_check.lean  avl_tree_rotation.lean  bellman_ford.lean  bfs_shortest_path.lean  binary_search.lean  binary_search_tree_insert.lean  binary_search_tree_search.lean  binomial_coefficient.lean  bloom_filter.lean  boyer_moore_search.lean  bubble_sort.lean  catalan_number.lean  chinese_remainder_theorem.lean  circular_buffer.lean  coin_change.lean  counting_sort.lean  dfs_cycle_detection.lean  dijkstra_shortest_path.lean  disjoint_set_union.lean  doubly_linked_list.lean  edit_distance.lean  euclidean_gcd.lean  euler_totient.lean  exponential_search.lean  extended_euclidean.lean  factorial.lean  fermats_little_theorem.lean  fibonacci_dp.lean  fibonacci_search.lean  floyd_warshall.lean  ford_fulkerson_max_flow.lean  fractional_knapsack.lean  graph_bipartite_check.lean  graph_connectivity.lean  hash_map_put_get.lean  hash_table_lookup.lean  heap_insert_extract.lean  heap_sort.lean  (+60 more)
core/: __init__.py  licensing.py  persistence.py  security.py  versioning.py
docs/: ARCHITECTURE.md  HELP.md  QUICKSTART.md  generate_diagrams.py  index.html
examples/: 01_binary_search.py  02_gcd.py
lean/: lakefile.lean
lean/src/: Spec.lean  (+1 more)
publish/: __init__.py
tests/: test_batch.py  test_core.py  test_core_comprehensive.py
visualize/: __init__.py
(+57 files in other folders)
